deploy: 319be6cd4f21472ffb0f76383665b95466053b0d

--- a/classes/node.html
+++ b/classes/node.html
@@ -2809,17 +2809,17 @@ img {
 				<div class="tsd-signature tsd-kind-icon">children<span class="tsd-signature-symbol">:</span> <a href="node.html" class="tsd-signature-type">Node</a><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol"> = []</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/zhmushan/abc/blob/f98faa7/node.ts#L29">node.ts:29</a></li>
+						<li>Defined in <a href="https://github.com/zhmushan/abc/blob/319be6c/node.ts#L29">node.ts:29</a></li>
 					</ul>
 				</aside>
 			</section>
 			<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
 				<a name="handle" class="tsd-anchor"></a>
 				<h3>handle</h3>
-				<div class="tsd-signature tsd-kind-icon">handle<span class="tsd-signature-symbol">:</span> <a href="../globals.html#handlerfunc" class="tsd-signature-type">HandlerFunc</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span></div>
+				<div class="tsd-signature tsd-kind-icon">handle<span class="tsd-signature-symbol">:</span> <a href="../index.html#handlerfunc" class="tsd-signature-type">HandlerFunc</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/zhmushan/abc/blob/f98faa7/node.ts#L34">node.ts:34</a></li>
+						<li>Defined in <a href="https://github.com/zhmushan/abc/blob/319be6c/node.ts#L34">node.ts:34</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -2829,7 +2829,7 @@ img {
 				<div class="tsd-signature tsd-kind-icon">indices<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = &quot;&quot;</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/zhmushan/abc/blob/f98faa7/node.ts#L33">node.ts:33</a></li>
+						<li>Defined in <a href="https://github.com/zhmushan/abc/blob/319be6c/node.ts#L33">node.ts:33</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -2839,7 +2839,7 @@ img {
 				<div class="tsd-signature tsd-kind-icon">max<wbr>Params<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> = 0</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/zhmushan/abc/blob/f98faa7/node.ts#L35">node.ts:35</a></li>
+						<li>Defined in <a href="https://github.com/zhmushan/abc/blob/319be6c/node.ts#L35">node.ts:35</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -2849,7 +2849,7 @@ img {
 				<div class="tsd-signature tsd-kind-icon">n<wbr>Type<span class="tsd-signature-symbol">:</span> <a href="../enums/nodetype.html" class="tsd-signature-type">NodeType</a><span class="tsd-signature-symbol"> = NodeType.Static</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/zhmushan/abc/blob/f98faa7/node.ts#L32">node.ts:32</a></li>
+						<li>Defined in <a href="https://github.com/zhmushan/abc/blob/319be6c/node.ts#L32">node.ts:32</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -2859,7 +2859,7 @@ img {
 				<div class="tsd-signature tsd-kind-icon">path<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = &quot;&quot;</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/zhmushan/abc/blob/f98faa7/node.ts#L30">node.ts:30</a></li>
+						<li>Defined in <a href="https://github.com/zhmushan/abc/blob/319be6c/node.ts#L30">node.ts:30</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -2869,7 +2869,7 @@ img {
 				<div class="tsd-signature tsd-kind-icon">priority<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> = 0</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/zhmushan/abc/blob/f98faa7/node.ts#L28">node.ts:28</a></li>
+						<li>Defined in <a href="https://github.com/zhmushan/abc/blob/319be6c/node.ts#L28">node.ts:28</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -2879,7 +2879,7 @@ img {
 				<div class="tsd-signature tsd-kind-icon">wild<wbr>Child<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = false</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/zhmushan/abc/blob/f98faa7/node.ts#L31">node.ts:31</a></li>
+						<li>Defined in <a href="https://github.com/zhmushan/abc/blob/319be6c/node.ts#L31">node.ts:31</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -2890,13 +2890,13 @@ img {
 				<a name="addroute" class="tsd-anchor"></a>
 				<h3>add<wbr>Route</h3>
 				<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-					<li class="tsd-signature tsd-kind-icon">add<wbr>Route<span class="tsd-signature-symbol">(</span>path<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, handle<span class="tsd-signature-symbol">: </span><a href="../globals.html#handlerfunc" class="tsd-signature-type">HandlerFunc</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+					<li class="tsd-signature tsd-kind-icon">add<wbr>Route<span class="tsd-signature-symbol">(</span>path<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, handle<span class="tsd-signature-symbol">: </span><a href="../index.html#handlerfunc" class="tsd-signature-type">HandlerFunc</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
 				</ul>
 				<ul class="tsd-descriptions">
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/f98faa7/node.ts#L37">node.ts:37</a></li>
+								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/319be6c/node.ts#L37">node.ts:37</a></li>
 							</ul>
 						</aside>
 						<h4 class="tsd-parameters-title">Parameters</h4>
@@ -2905,7 +2905,7 @@ img {
 								<h5>path: <span class="tsd-signature-type">string</span></h5>
 							</li>
 							<li>
-								<h5>handle: <a href="../globals.html#handlerfunc" class="tsd-signature-type">HandlerFunc</a></h5>
+								<h5>handle: <a href="../index.html#handlerfunc" class="tsd-signature-type">HandlerFunc</a></h5>
 							</li>
 						</ul>
 						<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -2916,13 +2916,13 @@ img {
 				<a name="getvalue" class="tsd-anchor"></a>
 				<h3>get<wbr>Value</h3>
 				<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-					<li class="tsd-signature tsd-kind-icon">get<wbr>Value<span class="tsd-signature-symbol">(</span>path<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">[</span><a href="../globals.html#handlerfunc" class="tsd-signature-type">HandlerFunc</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol">, </span><a href="../globals.html#params" class="tsd-signature-type">Params</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol">]</span></li>
+					<li class="tsd-signature tsd-kind-icon">get<wbr>Value<span class="tsd-signature-symbol">(</span>path<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">[</span><a href="../index.html#handlerfunc" class="tsd-signature-type">HandlerFunc</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol">, </span><a href="../index.html#params" class="tsd-signature-type">Params</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol">]</span></li>
 				</ul>
 				<ul class="tsd-descriptions">
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/f98faa7/node.ts#L338">node.ts:338</a></li>
+								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/319be6c/node.ts#L338">node.ts:338</a></li>
 							</ul>
 						</aside>
 						<h4 class="tsd-parameters-title">Parameters</h4>
@@ -2931,7 +2931,7 @@ img {
 								<h5>path: <span class="tsd-signature-type">string</span></h5>
 							</li>
 						</ul>
-						<h4 class="tsd-returns-title">Returns <span class="tsd-signature-symbol">[</span><a href="../globals.html#handlerfunc" class="tsd-signature-type">HandlerFunc</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol">, </span><a href="../globals.html#params" class="tsd-signature-type">Params</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol">]</span></h4>
+						<h4 class="tsd-returns-title">Returns <span class="tsd-signature-symbol">[</span><a href="../index.html#handlerfunc" class="tsd-signature-type">HandlerFunc</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol">, </span><a href="../index.html#params" class="tsd-signature-type">Params</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol">]</span></h4>
 					</li>
 				</ul>
 			</section>
@@ -2945,7 +2945,7 @@ img {
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/f98faa7/node.ts#L176">node.ts:176</a></li>
+								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/319be6c/node.ts#L176">node.ts:176</a></li>
 							</ul>
 						</aside>
 						<h4 class="tsd-parameters-title">Parameters</h4>
@@ -2962,13 +2962,13 @@ img {
 				<a name="insertchild" class="tsd-anchor"></a>
 				<h3>insert<wbr>Child</h3>
 				<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-					<li class="tsd-signature tsd-kind-icon">insert<wbr>Child<span class="tsd-signature-symbol">(</span>numParams<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span>, path<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, fullPath<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, handle<span class="tsd-signature-symbol">: </span><a href="../globals.html#handlerfunc" class="tsd-signature-type">HandlerFunc</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+					<li class="tsd-signature tsd-kind-icon">insert<wbr>Child<span class="tsd-signature-symbol">(</span>numParams<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span>, path<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, fullPath<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, handle<span class="tsd-signature-symbol">: </span><a href="../index.html#handlerfunc" class="tsd-signature-type">HandlerFunc</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
 				</ul>
 				<ul class="tsd-descriptions">
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/f98faa7/node.ts#L203">node.ts:203</a></li>
+								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/319be6c/node.ts#L203">node.ts:203</a></li>
 							</ul>
 						</aside>
 						<h4 class="tsd-parameters-title">Parameters</h4>
@@ -2983,7 +2983,7 @@ img {
 								<h5>fullPath: <span class="tsd-signature-type">string</span></h5>
 							</li>
 							<li>
-								<h5>handle: <a href="../globals.html#handlerfunc" class="tsd-signature-type">HandlerFunc</a></h5>
+								<h5>handle: <a href="../index.html#handlerfunc" class="tsd-signature-type">HandlerFunc</a></h5>
 							</li>
 						</ul>
 						<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
