--- a/classes/router.html
+++ b/classes/router.html
@@ -2773,7 +2773,7 @@ img {
 				<div class="tsd-signature tsd-kind-icon">trees<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><a href="node.html" class="tsd-signature-type">Node</a><span class="tsd-signature-symbol">&gt;</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/zhmushan/abc/blob/f98faa7/router.ts#L11">router.ts:11</a></li>
+						<li>Defined in <a href="https://github.com/zhmushan/abc/blob/319be6c/router.ts#L11">router.ts:11</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -2784,13 +2784,13 @@ img {
 				<a name="add" class="tsd-anchor"></a>
 				<h3>add</h3>
 				<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-					<li class="tsd-signature tsd-kind-icon">add<span class="tsd-signature-symbol">(</span>method<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, path<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, h<span class="tsd-signature-symbol">: </span><a href="../globals.html#handlerfunc" class="tsd-signature-type">HandlerFunc</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+					<li class="tsd-signature tsd-kind-icon">add<span class="tsd-signature-symbol">(</span>method<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, path<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, h<span class="tsd-signature-symbol">: </span><a href="../index.html#handlerfunc" class="tsd-signature-type">HandlerFunc</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
 				</ul>
 				<ul class="tsd-descriptions">
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/f98faa7/router.ts#L13">router.ts:13</a></li>
+								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/319be6c/router.ts#L13">router.ts:13</a></li>
 							</ul>
 						</aside>
 						<h4 class="tsd-parameters-title">Parameters</h4>
@@ -2802,7 +2802,7 @@ img {
 								<h5>path: <span class="tsd-signature-type">string</span></h5>
 							</li>
 							<li>
-								<h5>h: <a href="../globals.html#handlerfunc" class="tsd-signature-type">HandlerFunc</a></h5>
+								<h5>h: <a href="../index.html#handlerfunc" class="tsd-signature-type">HandlerFunc</a></h5>
 							</li>
 						</ul>
 						<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -2813,13 +2813,13 @@ img {
 				<a name="find" class="tsd-anchor"></a>
 				<h3>find</h3>
 				<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-					<li class="tsd-signature tsd-kind-icon">find<span class="tsd-signature-symbol">(</span>method<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, c<span class="tsd-signature-symbol">: </span><a href="context.html" class="tsd-signature-type">Context</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="../globals.html#handlerfunc" class="tsd-signature-type">HandlerFunc</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span></li>
+					<li class="tsd-signature tsd-kind-icon">find<span class="tsd-signature-symbol">(</span>method<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, c<span class="tsd-signature-symbol">: </span><a href="context.html" class="tsd-signature-type">Context</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="../index.html#handlerfunc" class="tsd-signature-type">HandlerFunc</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span></li>
 				</ul>
 				<ul class="tsd-descriptions">
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/f98faa7/router.ts#L27">router.ts:27</a></li>
+								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/319be6c/router.ts#L27">router.ts:27</a></li>
 							</ul>
 						</aside>
 						<h4 class="tsd-parameters-title">Parameters</h4>
@@ -2831,7 +2831,7 @@ img {
 								<h5>c: <a href="context.html" class="tsd-signature-type">Context</a></h5>
 							</li>
 						</ul>
-						<h4 class="tsd-returns-title">Returns <a href="../globals.html#handlerfunc" class="tsd-signature-type">HandlerFunc</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span></h4>
+						<h4 class="tsd-returns-title">Returns <a href="../index.html#handlerfunc" class="tsd-signature-type">HandlerFunc</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span></h4>
 					</li>
 				</ul>
 			</section>
