--- a/interfaces/loggerconfig.html
+++ b/interfaces/loggerconfig.html
@@ -2765,10 +2765,10 @@ img {
 			<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
 				<a name="formatter" class="tsd-anchor"></a>
 				<h3><span class="tsd-flag ts-flagOptional">Optional</span> formatter</h3>
-				<div class="tsd-signature tsd-kind-icon">formatter<span class="tsd-signature-symbol">:</span> <a href="../globals.html#formatter" class="tsd-signature-type">Formatter</a></div>
+				<div class="tsd-signature tsd-kind-icon">formatter<span class="tsd-signature-symbol">:</span> <a href="../index.html#formatter" class="tsd-signature-type">Formatter</a></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/zhmushan/abc/blob/f98faa7/middleware/logger.ts#L57">middleware/logger.ts:57</a></li>
+						<li>Defined in <a href="https://github.com/zhmushan/abc/blob/319be6c/middleware/logger.ts#L57">middleware/logger.ts:57</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -2778,17 +2778,17 @@ img {
 				<div class="tsd-signature tsd-kind-icon">output<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Deno.Writer</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/zhmushan/abc/blob/f98faa7/middleware/logger.ts#L60">middleware/logger.ts:60</a></li>
+						<li>Defined in <a href="https://github.com/zhmushan/abc/blob/319be6c/middleware/logger.ts#L60">middleware/logger.ts:60</a></li>
 					</ul>
 				</aside>
 			</section>
 			<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
 				<a name="skipper" class="tsd-anchor"></a>
 				<h3><span class="tsd-flag ts-flagOptional">Optional</span> skipper</h3>
-				<div class="tsd-signature tsd-kind-icon">skipper<span class="tsd-signature-symbol">:</span> <a href="../globals.html#skipper" class="tsd-signature-type">Skipper</a></div>
+				<div class="tsd-signature tsd-kind-icon">skipper<span class="tsd-signature-symbol">:</span> <a href="../index.html#skipper" class="tsd-signature-type">Skipper</a></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/zhmushan/abc/blob/f98faa7/middleware/logger.ts#L56">middleware/logger.ts:56</a></li>
+						<li>Defined in <a href="https://github.com/zhmushan/abc/blob/319be6c/middleware/logger.ts#L56">middleware/logger.ts:56</a></li>
 					</ul>
 				</aside>
 			</section>
