deploy: 9eefba9942bd27ec185103c8abb011705a6ffe7b

--- a/classes/context.html
+++ b/classes/context.html
@@ -2856,7 +2856,7 @@ img {
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/15725bb/context.ts#L45">context.ts:45</a></li>
+								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/9eefba9/context.ts#L46">context.ts:46</a></li>
 							</ul>
 						</aside>
 						<h4 class="tsd-parameters-title">Parameters</h4>
@@ -2886,7 +2886,7 @@ img {
 				<div class="tsd-signature tsd-kind-icon">app<span class="tsd-signature-symbol">:</span> <a href="application.html" class="tsd-signature-type">Application</a></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/zhmushan/abc/blob/15725bb/context.ts#L20">context.ts:20</a></li>
+						<li>Defined in <a href="https://github.com/zhmushan/abc/blob/9eefba9/context.ts#L21">context.ts:21</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -2896,7 +2896,7 @@ img {
 				<div class="tsd-signature tsd-kind-icon">params<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">&gt;</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/zhmushan/abc/blob/15725bb/context.ts#L25">context.ts:25</a></li>
+						<li>Defined in <a href="https://github.com/zhmushan/abc/blob/9eefba9/context.ts#L26">context.ts:26</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -2906,7 +2906,7 @@ img {
 				<div class="tsd-signature tsd-kind-icon">request<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">ServerRequest</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/zhmushan/abc/blob/15725bb/context.ts#L21">context.ts:21</a></li>
+						<li>Defined in <a href="https://github.com/zhmushan/abc/blob/9eefba9/context.ts#L22">context.ts:22</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -2916,7 +2916,7 @@ img {
 				<div class="tsd-signature tsd-kind-icon">url<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">URL</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/zhmushan/abc/blob/15725bb/context.ts#L22">context.ts:22</a></li>
+						<li>Defined in <a href="https://github.com/zhmushan/abc/blob/9eefba9/context.ts#L23">context.ts:23</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -2933,7 +2933,7 @@ img {
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/15725bb/context.ts#L27">context.ts:27</a></li>
+								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/9eefba9/context.ts#L28">context.ts:28</a></li>
 							</ul>
 						</aside>
 						<h4 class="tsd-returns-title">Returns <a href="../index.html#cookies" class="tsd-signature-type">Cookies</a></h4>
@@ -2950,7 +2950,7 @@ img {
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/15725bb/context.ts#L35">context.ts:35</a></li>
+								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/9eefba9/context.ts#L36">context.ts:36</a></li>
 							</ul>
 						</aside>
 						<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
@@ -2967,7 +2967,7 @@ img {
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/15725bb/context.ts#L31">context.ts:31</a></li>
+								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/9eefba9/context.ts#L32">context.ts:32</a></li>
 							</ul>
 						</aside>
 						<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
@@ -2984,7 +2984,7 @@ img {
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/15725bb/context.ts#L39">context.ts:39</a></li>
+								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/9eefba9/context.ts#L40">context.ts:40</a></li>
 							</ul>
 						</aside>
 						<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -2998,13 +2998,13 @@ img {
 				<a name="blob" class="tsd-anchor"></a>
 				<h3>blob</h3>
 				<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-					<li class="tsd-signature tsd-kind-icon">blob<span class="tsd-signature-symbol">(</span>b<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Uint8Array</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Deno.Reader</span>, contentType<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, code<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">Status</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+					<li class="tsd-signature tsd-kind-icon">blob<span class="tsd-signature-symbol">(</span>b<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Uint8Array</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Deno.Reader</span>, contentType<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">string</span>, code<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">Status</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
 				</ul>
 				<ul class="tsd-descriptions">
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/15725bb/context.ts#L110">context.ts:110</a></li>
+								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/9eefba9/context.ts#L111">context.ts:111</a></li>
 							</ul>
 						</aside>
 						<div class="tsd-comment tsd-typography">
@@ -3018,7 +3018,7 @@ img {
 								<h5>b: <span class="tsd-signature-type">Uint8Array</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Deno.Reader</span></h5>
 							</li>
 							<li>
-								<h5>contentType: <span class="tsd-signature-type">string</span></h5>
+								<h5><span class="tsd-flag ts-flagOptional">Optional</span> contentType: <span class="tsd-signature-type">string</span></h5>
 							</li>
 							<li>
 								<h5><span class="tsd-flag ts-flagDefault value">Default value</span> code: <span class="tsd-signature-type">Status</span><span class="tsd-signature-symbol"> = Status.OK</span></h5>
@@ -3038,7 +3038,7 @@ img {
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/15725bb/context.ts#L63">context.ts:63</a></li>
+								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/9eefba9/context.ts#L64">context.ts:64</a></li>
 							</ul>
 						</aside>
 						<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">unknown</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -3049,13 +3049,13 @@ img {
 				<a name="file" class="tsd-anchor"></a>
 				<h3>file</h3>
 				<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-					<li class="tsd-signature tsd-kind-icon">file<span class="tsd-signature-symbol">(</span>filepath<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">&gt;</span></li>
+					<li class="tsd-signature tsd-kind-icon">file<span class="tsd-signature-symbol">(</span>filepath<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></li>
 				</ul>
 				<ul class="tsd-descriptions">
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/15725bb/context.ts#L120">context.ts:120</a></li>
+								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/9eefba9/context.ts#L123">context.ts:123</a></li>
 							</ul>
 						</aside>
 						<h4 class="tsd-parameters-title">Parameters</h4>
@@ -3064,7 +3064,7 @@ img {
 								<h5>filepath: <span class="tsd-signature-type">string</span></h5>
 							</li>
 						</ul>
-						<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">&gt;</span></h4>
+						<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
 					</li>
 				</ul>
 			</section>
@@ -3078,7 +3078,7 @@ img {
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/15725bb/context.ts#L82">context.ts:82</a></li>
+								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/9eefba9/context.ts#L83">context.ts:83</a></li>
 							</ul>
 						</aside>
 						<div class="tsd-comment tsd-typography">
@@ -3109,7 +3109,7 @@ img {
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/15725bb/context.ts#L89">context.ts:89</a></li>
+								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/9eefba9/context.ts#L90">context.ts:90</a></li>
 							</ul>
 						</aside>
 						<div class="tsd-comment tsd-typography">
@@ -3140,7 +3140,7 @@ img {
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/15725bb/context.ts#L73">context.ts:73</a></li>
+								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/9eefba9/context.ts#L74">context.ts:74</a></li>
 							</ul>
 						</aside>
 						<h4 class="tsd-parameters-title">Parameters</h4>
@@ -3166,7 +3166,7 @@ img {
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/15725bb/context.ts#L97">context.ts:97</a></li>
+								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/9eefba9/context.ts#L98">context.ts:98</a></li>
 							</ul>
 						</aside>
 						<div class="tsd-comment tsd-typography">
@@ -3207,7 +3207,7 @@ img {
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/15725bb/context.ts#L137">context.ts:137</a></li>
+								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/9eefba9/context.ts#L143">context.ts:143</a></li>
 							</ul>
 						</aside>
 						<div class="tsd-comment tsd-typography">
@@ -3235,7 +3235,7 @@ img {
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/15725bb/context.ts#L67">context.ts:67</a></li>
+								<li>Defined in <a href="https://github.com/zhmushan/abc/blob/9eefba9/context.ts#L68">context.ts:68</a></li>
 							</ul>
 						</aside>
 						<h4 class="tsd-parameters-title">Parameters</h4>
@@ -3260,7 +3260,7 @@ img {
 				<div class="tsd-signature tsd-kind-icon">response<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/zhmushan/abc/blob/15725bb/context.ts#L24">context.ts:24</a></li>
+						<li>Defined in <a href="https://github.com/zhmushan/abc/blob/9eefba9/context.ts#L25">context.ts:25</a></li>
 					</ul>
 				</aside>
 				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
@@ -3269,7 +3269,7 @@ img {
 					<div class="tsd-signature tsd-kind-icon">headers<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Headers</span><span class="tsd-signature-symbol"> = new Headers()</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/zhmushan/abc/blob/15725bb/context.ts#L24">context.ts:24</a></li>
+							<li>Defined in <a href="https://github.com/zhmushan/abc/blob/9eefba9/context.ts#L25">context.ts:25</a></li>
 						</ul>
 					</aside>
 				</section>
